fix: stretch background of footer and project hero section

--- a/src/app/assets/scss/base/_base.scss
+++ b/src/app/assets/scss/base/_base.scss
@@ -20,8 +20,6 @@ h6 {
 
 .wrapper {
   min-height: 100vh;
-  max-width: $desktop-md;
-  margin: 0 auto;
   position: relative;
 }
 
