--- a/src/widgets/AppHeader/ui/app-header.scss
+++ b/src/widgets/AppHeader/ui/app-header.scss
@@ -7,7 +7,8 @@
 }
 
 .header__container {
-  width: 100%;
+  max-width: $desktop-md;
+  margin: 0 auto;
   min-height: 80px;
   @include flex(row, space-between, center);
   @include padding-horizontal($padding-hr-desktop);
