--- a/src/widgets/DetailsModal/ui/details-modal.scss
+++ b/src/widgets/DetailsModal/ui/details-modal.scss
@@ -12,8 +12,6 @@
 }
 
 .details-modal__container {
-  max-width: $desktop-md;
-  margin: 0 auto;
   @include flex(column);
   gap: 60px;
   padding-bottom: 60px;
@@ -21,6 +19,13 @@
 }
 
 .details-modal__box {
+  max-width: $desktop-md;
+  margin: 0 auto;
+  @include flex(column);
+  gap: 60px;
+}
+
+.details-modal__contact-box {
   @include padding-horizontal($padding-hr-desktop);
 }
 
